# rust-web-service

./: .env  .gitignore  Cargo.toml  README.md  db.db  notes.md  notes.txt
src/: main.rs
src/api/: book.rs  mod.rs  user.rs
src/config/: db.rs  env.rs
src/models/: book.rs  mod.rs  user.rs
src/routes/: router.rs
src/types/: book.rs  context.rs  message.rs  mod.rs  request.rs  user.rs
src/utils/: hash.rs  jwt.rs
