[package]
name = "rust-web-service"
version = "0.1.0"
authors = ["ahsan-javaid <mister.ahsan.javaid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.30.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
bcrypt = "0.13"
